# CLAP

./: .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  README.md  build.bat  pyproject.toml  requirements.txt  upload_pypi.sh
clap/: CHANGELOG  LICENSE  pyproject.toml
clap/src/CLAP/: English.qm  __main__.py  app.py  clap.clap  trans.bat  水仙花数clap.clap
src/clap/: __init__.py  __main__.py
src/clap/cli/: __init__.py  main.py
src/clap/core/: __init__.py  chat_thread.py  document.py  knowledge_base.py
src/clap/gui/: __init__.py  main_window.py  settings_dialog.py
src/clap/utils/: __init__.py  config.py  i18n.py
src/clap/web/: __init__.py  app.py
src/clap/web/templates/: index.html
